<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:id="@+id/activity_main"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_main_margin"
    android:paddingLeft="@dimen/activity_main_margin"
    android:paddingRight="@dimen/activity_main_margin"
    android:paddingTop="@dimen/activity_main_margin"
    tools:context="ca.mattcudmore.day2day.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:orientation="horizontal">

        <!-- Request focus to prevent focus on EditText when activity launches -->
        <requestFocus/>

        <Button
            android:id="@+id/button_prevDay"
            android:layout_width="140sp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:contentDescription="@string/button_prevDay_help"
            android:text="@string/button_prevDay_text"
            android:textSize="24sp"/>

        <Button
            android:id="@+id/button_currentDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="(Date will be shown)"
            android:textAlignment="center"
            android:textSize="24sp"
            android:textStyle="normal|bold"/>

        <Button
            android:id="@+id/button_nextDay"
            android:layout_width="140sp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:contentDescription="@string/button_nextDay_help"
            android:text="@string/button_nextDay_text"
            android:textSize="24sp"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_newEvent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/editText_newEvent"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/editText_newEvent_hint"
            android:imeOptions="actionDone"
            android:inputType="text|textCapSentences|textShortMessage"
            android:maxLines="1"
            android:textAlignment="textStart"/>

        <Button
            android:id="@+id/button_editNewEvent"
            android:layout_width="140sp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:contentDescription="@string/button_editNewEvent_help"
            android:text="@string/button_editNewEvent_text"/>

        <Button
            android:id="@+id/button_addNewEvent"
            android:layout_width="140sp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:contentDescription="@string/button_addNewEvent_help"
            android:text="@string/button_addNewEvent_text"/>
    </LinearLayout>

    <ListView
        android:id="@+id/listView_events"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

</LinearLayout>
