<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:id="@+id/activity_backup"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="ca.mattcudmore.day2day.BackupActivity">

    <TextView
        android:text="@string/textView_backupLocation_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textView_backupLocation"/>

    <Space
        android:layout_width="match_parent"
        android:layout_height="16dp"/>

    <Button
        android:text="@string/button_backupDatabase_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/button_backupDatabase"/>

    <Button
        android:text="@string/button_restoreDatabase_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/button_restoreDatabase"/>

</LinearLayout>
